# meta-signal-system

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  rust-toolchain.toml  skills.md
src/: lib.rs
tests/: round_trip.rs
