[package]
name         = "meta-signal-system"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-system"
description  = "Meta signal contract for privileged system daemon configuration."
publish      = false

[lib]
name = "meta_signal_system"
path = "src/lib.rs"

[features]
default = ["nota-text"]
nota-text = ["signal-frame/nota-text"]

[dependencies]
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "drop-next" }
signal-system    = { git = "https://github.com/LiGoldragon/signal-system.git", branch = "drop-next" }
nota    = { git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror    = "2"

[dev-dependencies]
signal-persona = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "drop-next" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
